# rust-syslog

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: rust.yml
examples/: log.rs  rfc5424.rs  write.rs
src/: errors.rs  facility.rs  format.rs  lib.rs  test.rs  tests.rs  unixdatagram.rs
src/syslog/: lib.rs  test.rs  unixdatagram.rs
