[package]

name = "syslog-tls"
version = "7.1.0"
authors = [ "jonathan.brouwer@technolution.nl", "contact@geoffroycouprie.com" ]
description = "Send log messages to syslog"
license = "MIT"
repository = "https://github.com/Geal/rust-syslog"
documentation = "https://docs.rs/syslog"
keywords = ["syslog", "logs", "logging"]
edition = "2021"

[dependencies]
hostname    = "0.3"
time        = { version = "0.3", features = ["local-offset", "formatting"] }
log         = { version = "0.4", features = [ "std" ] }
error-chain = { version = "0.12" }
libc = "0.2"
native-tls = "0.2.11"