[package]

name = "syslog"
version = "6.1.1"
authors = [ "contact@geoffroycouprie.com" ]
description = "Syslog message formatter and writer, supporting unix sockets, UDP and TCP exporters"
license = "MIT"
repository = "https://github.com/Geal/rust-syslog"
documentation = "https://docs.rs/syslog"
keywords = ["syslog", "logs", "logging"]

[dependencies]
hostname    = "0.4"
time        = { version = "0.3.5", features = ["local-offset", "formatting"] }
log         = { version = "0.4.8", features = [ "std" ] }
libc = "0.2.112"
